--- a/src/ui/view/GameFrame.form
+++ b/src/ui/view/GameFrame.form
@@ -8,6 +8,7 @@
     <properties>
       <maximumSize width="1920" height="1080"/>
       <minimumSize width="1280" height="720"/>
+      <preferredSize width="1280" height="720"/>
     </properties>
     <border type="none"/>
     <children>
@@ -15,9 +16,9 @@
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="2" fill="1" indent="0" use-parent-layout="true">
-            <minimum-size width="960" height="200"/>
-            <preferred-size width="-1" height="200"/>
-            <maximum-size width="-1" height="250"/>
+            <minimum-size width="960" height="300"/>
+            <preferred-size width="960" height="300"/>
+            <maximum-size width="-1" height="300"/>
           </grid>
         </constraints>
         <properties/>
@@ -42,7 +43,7 @@
         <constraints>
           <grid row="0" column="0" row-span="3" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="2" indent="0" use-parent-layout="true">
             <minimum-size width="150" height="720"/>
-            <preferred-size width="150" height="-1"/>
+            <preferred-size width="150" height="720"/>
             <maximum-size width="200" height="-1"/>
           </grid>
         </constraints>
@@ -55,7 +56,7 @@
         <constraints>
           <grid row="0" column="2" row-span="3" col-span="1" vsize-policy="3" hsize-policy="3" anchor="4" fill="2" indent="0" use-parent-layout="true">
             <minimum-size width="150" height="720"/>
-            <preferred-size width="150" height="-1"/>
+            <preferred-size width="150" height="720"/>
             <maximum-size width="150" height="-1"/>
           </grid>
         </constraints>
@@ -66,7 +67,7 @@
       <grid id="9c6a8" binding="stockpile" custom-create="true" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="true"/>
         </constraints>
         <properties/>
         <border type="none"/>
