--- a/src/ui/view/GameFrame.form
+++ b/src/ui/view/GameFrame.form
@@ -7,7 +7,7 @@
     </constraints>
     <properties>
       <maximumSize width="1920" height="1080"/>
-      <minimumSize width="1280" height="720"/>
+      <minimumSize width="640" height="480"/>
       <preferredSize width="1280" height="720"/>
     </properties>
     <border type="none"/>
@@ -16,9 +16,9 @@
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="2" fill="1" indent="0" use-parent-layout="true">
-            <minimum-size width="960" height="250"/>
+            <minimum-size width="440" height="180"/>
             <preferred-size width="960" height="250"/>
-            <maximum-size width="-1" height="300"/>
+            <maximum-size width="1520" height="300"/>
           </grid>
         </constraints>
         <properties/>
@@ -28,10 +28,10 @@
       <grid id="e1159" binding="opponentHand2" custom-create="true" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="2" hsize-policy="2" anchor="1" fill="1" indent="0" use-parent-layout="true">
-            <minimum-size width="960" height="150"/>
-            <preferred-size width="-1" height="150"/>
-            <maximum-size width="-1" height="200"/>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="true">
+            <minimum-size width="440" height="100"/>
+            <preferred-size width="960" height="150"/>
+            <maximum-size width="1520" height="200"/>
           </grid>
         </constraints>
         <properties/>
@@ -42,9 +42,9 @@
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="3" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="2" indent="0" use-parent-layout="true">
-            <minimum-size width="150" height="720"/>
+            <minimum-size width="100" height="480"/>
             <preferred-size width="150" height="720"/>
-            <maximum-size width="200" height="-1"/>
+            <maximum-size width="200" height="1080"/>
           </grid>
         </constraints>
         <properties/>
@@ -55,9 +55,9 @@
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="2" row-span="3" col-span="1" vsize-policy="3" hsize-policy="3" anchor="4" fill="2" indent="0" use-parent-layout="true">
-            <minimum-size width="150" height="720"/>
+            <minimum-size width="100" height="480"/>
             <preferred-size width="150" height="720"/>
-            <maximum-size width="150" height="-1"/>
+            <maximum-size width="150" height="1080"/>
           </grid>
         </constraints>
         <properties/>
@@ -67,7 +67,11 @@
       <grid id="9c6a8" binding="stockpilePanel" custom-create="true" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="true">
+            <minimum-size width="440" height="200"/>
+            <preferred-size width="960" height="320"/>
+            <maximum-size width="1520" height="580"/>
+          </grid>
         </constraints>
         <properties/>
         <border type="none"/>
