--- a/src/ui/view/GameFrame.form
+++ b/src/ui/view/GameFrame.form
@@ -6,6 +6,8 @@
       <xy x="20" y="20" width="1280" height="720"/>
     </constraints>
     <properties>
+      <background color="-15224517"/>
+      <foreground color="-1"/>
       <maximumSize width="1920" height="1080"/>
       <minimumSize width="640" height="480"/>
       <preferredSize width="1280" height="720"/>
@@ -21,7 +23,9 @@
             <maximum-size width="1520" height="300"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <opaque value="false"/>
+        </properties>
         <border type="none"/>
         <children/>
       </grid>
@@ -34,7 +38,9 @@
             <maximum-size width="1520" height="200"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <opaque value="false"/>
+        </properties>
         <border type="none"/>
         <children/>
       </grid>
@@ -47,7 +53,9 @@
             <maximum-size width="200" height="1080"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <opaque value="false"/>
+        </properties>
         <border type="none"/>
         <children/>
       </grid>
@@ -60,7 +68,9 @@
             <maximum-size width="150" height="1080"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <opaque value="false"/>
+        </properties>
         <border type="none"/>
         <children/>
       </grid>
@@ -68,7 +78,9 @@
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <opaque value="false"/>
+        </properties>
         <border type="none"/>
         <children/>
       </grid>
